Added self to authors.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 Frank "SeySayux" Erens <seysayux@gmail.com>
 Scott "ernieballsep" Philbrook <ernieballsep@gmail.com>
+Randy "villadelfia" Thiemann <uselinuxnow@gmail.com>
